Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
     <div class="container">
         <h2>Enter your email address:</h2>
-        <form action="email.php" method="POST">
+        <form action="email.html" method="POST">
             <label for="email">Email:</label>
             <input type="text" id="email" name="email">
             <input type="submit" value="Send" name="submit">
